# mtl_events_agent

./: README.md  check_jazz_events.py  pyproject.toml  requirements.txt  test_sources.py  test_ville_mtl.py
.github/workflows/: publish.yml
src/: __init__.py  aggregator.py  calendar_client.py  keywords.yaml  main.py  models.py  ranker.py
src/mtl_events.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sources/: __init__.py  eventbrite.py  reddit.py  rss_generic.py  ticketmaster.py  tourisme.py  ville_mtl.py
src/utils/: http.py
tests/: _test_tourisme_disabled.py  test_aggregator.py  test_city_fetch.py  test_env_template.py  test_eventbrite.py  test_fetch_csv.py  test_main.py  test_models.py  test_ranker.py  test_reddit.py  test_rss_generic.py  test_ticketmaster.py  test_ville_mtl.py
